# mockery

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  integration_test.sh
.fleet/: run.json
.github/workflows/: cli.yml  docker.yml  rust.yml
example/: .gitignore  CMakeLists.txt
example/src/: CMakeLists.txt
example/src/app/: CMakeLists.txt  main.cpp
example/src/project/: CMakeLists.txt  FilesystemProjectStorage.cpp  FilesystemProjectStorage.h  Project.cpp  Project.h  ProjectStorage.h
example/test/: CMakeLists.txt  ProjectTest.cpp
examples/: CMakeLists.txt  Fooable.h  prog.cpp
src/: app.rs  ast_iterators.rs  cli.rs  error.rs  fs_iterators.rs  main.rs  mock_generation.rs  test_utils.rs
